<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/helpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/IntroTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Intro"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/NavTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nav_title"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/NavText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nav_text_1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/NavText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nav_text_2"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/NoteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/note_title"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/NoteText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/note_text_1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/NoteText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/note_text_2"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/NoteText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/note_text_3"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/NoteText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/note_title_4"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/ToDoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/to_do_list_title"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ToDoText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/todo_text1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/ToDoText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/todo_text_2"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/ToDoText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/todo_list_3"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/ToDoText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/todo_list_4"
                android:textSize="30sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>